tests/ui/reachable/unreachable-code-ret.stderr
error: unreachable statement
  --> $DIR/unreachable-code-ret.rs:7:5
   |
LL |     return;
   |     ------ any code following this expression is unreachable
LL |     println!("Paul is dead");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
note: the lint level is defined here
  --> $DIR/unreachable-code-ret.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

